Added two dancers and buttons

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -11,8 +11,12 @@
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">Add a Blinky Dancer</a>    </div>
+      <span class="title">Anna and Josh's Dance Party!</span>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">Add a Blinky Dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BouncyDancer">Add a Bouncy Dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="SuperHeroDancer">Add a SuperHero Dancer</a>
+      <a href="#" class="lineUpButton" data-dancer-maker-function-name="LineUp">Line Up Dancers!</a>
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
