--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,10 +12,10 @@
   <body>
     <div class="topbar">
       <span class="title">Anna and Josh's Dance Party!</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">Add a Blinky Dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="SpinningDancer">Add a Spinning Dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BouncyDancer">Add a Bouncy Dancer</a>
-      <a href="#" class="lineUpButton" data-dancer-maker-function-name="LineUp">Line Up Dancers!</a>
+      <button href="#" id="gif" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">Add a Blinky Dancer</button>
+      <button href="#" id="gif" class="addDancerButton" data-dancer-maker-function-name="SpinningDancer">Add a Spinning Dancer</button>
+      <button href="#" id="gif" class="addDancerButton" data-dancer-maker-function-name="BouncyDancer">Add a Bouncy Dancer</button>
+      <button href="#" id="gif" class="lineUpButton" data-dancer-maker-function-name="LineUp">Line Up Dancers!</button>
     </div>
     <script src="src/init.js"></script>
   </body>
