--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,14 +8,15 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/bouncyDancer.js"></script>
     <script src="src/spinningDancer.js"></script>
+    <!-- <iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=4Q46xYqUwZQ#gsc.tab=0" frameborder="0" allowfullscreen></iframe> -->
   </head>
   <body>
     <div class="topbar">
       <span class="title">Anna and Josh's Dance Party!</span>
-      <button href="#" id="gif" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">Add a Blinky Dancer</button>
-      <button href="#" id="gif" class="addDancerButton" data-dancer-maker-function-name="SpinningDancer">Add a Spinning Dancer</button>
-      <button href="#" id="gif" class="addDancerButton" data-dancer-maker-function-name="BouncyDancer">Add a Bouncy Dancer</button>
-      <button href="#" id="gif" class="lineUpButton" data-dancer-maker-function-name="LineUp">Line Up Dancers!</button>
+      <button href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">Add button Blinky Dancer</button>
+      <button href="#" class="addDancerButton" data-dancer-maker-function-name="SpinningDancer">Add button Spinning Dancer</button>
+      <button href="#" class="addDancerButton" data-dancer-maker-function-name="BouncyDancer">Add button Bouncy Dancer</button>
+      <button href="#" class="lineUpButton" data-dancer-maker-function-name="LineUp">Line Up Dancers!</button>
     </div>
     <script src="src/init.js"></script>
   </body>
